Homepage|Fixed: Ensure top border is collapsed below max-width

--- a/web/style.css
+++ b/web/style.css
@@ -1,4 +1,6 @@
 body {
+    position: absolute;
+
     background: #282D2B url(panoramarotator) no-repeat fixed;
     background-position: center 100%;
     background-size: 200% 200%;
@@ -561,6 +563,7 @@ ol.jumplist li {
     min-width: 640px;
     margin-left: auto;
     margin-right: auto;
+    top: -.6em;
 }
 
 .framepanel {
